Add clean buttons and process

--- a/LineEditMng/config.ini
+++ b/LineEditMng/config.ini
@@ -1,7 +1,18 @@
 log_title:'line editor'
 enable_print:True
 
+### line editor permission
+allow_settings:False
+allow_split_button:True
+allow_selfint_button:True
+allow_simpl_button:True
 
-### line editor setting
-tolerance:0.1
+### line editor default
+enable_split_button:False
+enable_selfint_button:False
+enable_simplify:True
+
+### function settings
+split_tolerance:0.1 
+simpl_tolerance:1
 rounding_digit:3
