Added icons and selfint

--- a/LineEditMng/config.ini
+++ b/LineEditMng/config.ini
@@ -8,9 +8,9 @@ allow_selfint_button:True
 allow_simpl_button:True
 
 ### line editor default
-enable_split_button:False
-enable_selfint_button:False
-enable_simplify:True
+check_split_button:False
+check_selfint_button:True
+check_simpl_button:True
 
 ### function settings
 split_tolerance:0.1 
