SELF-INTERSCTS FIRST TEST OK

--- a/LineEditMng/config.ini
+++ b/LineEditMng/config.ini
@@ -10,9 +10,9 @@ allow_simpl_button:True
 ### line editor default
 check_split_button:False
 check_selfint_button:True
-check_simpl_button:True
+check_simpl_button:False
 
 ### function settings
 split_tolerance:0.1 
-simpl_tolerance:1
+simpl_tolerance:0.1
 rounding_digit:3
