--- a/LineEditMng/config.ini
+++ b/LineEditMng/config.ini
@@ -8,8 +8,8 @@ allow_selfint_button:True
 allow_simpl_button:True
 
 ### line editor default
-check_split_button:False
-check_selfint_button:True
+check_split_button:True
+check_selfint_button:False
 check_simpl_button:False
 
 ### function settings
