COMMIT UNDO/REDO fixed, UPDATED when line is just SNAPED fixed

--- a/LineEditMng/config.ini
+++ b/LineEditMng/config.ini
@@ -1,18 +1,19 @@
-log_title:'line editor'
+author:Arcadia S.I.T.
+app_name:Line_Editor_Management
 enable_print:True
 
 ### line editor permission
-allow_settings:False
+allow_settings:True
 allow_split_button:True
 allow_selfint_button:True
 allow_simpl_button:True
 
 ### line editor default
 check_split_button:True
-check_selfint_button:False
-check_simpl_button:False
+check_selfint_button:True
+check_simpl_button:True
 
 ### function settings
 split_tolerance:0.1 
-simpl_tolerance:0.1
+simpl_tolerance:0.01
 rounding_digit:3
